--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
-k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
+k210-hal = { git = "https://github.com/yfblock/k210-hal" }
+k210-pac = { git = "https://github.com/yfblock/k210-pac" }
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 modular-bitfield = "0.11.2"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
